<resources>
    <string name="app_name">Buscador de Museo</string>
    <string name="tv_info">Buscador de museos de la \n Comunidad de madrid</string>
    <string name="txt_btn_selectFilter">Seleccionar Filtro</string>
    <string name="txt_btn_consultLists">Consultar listado</string>
    <string name="mn_list">Listado</string>
    <string name="mn_maps">Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title_direction">Dirección:</string>
    <string name="txt_zone">Area:</string>
    <string name="txt_district">Distrito:</string>
    <string name="txt_title_description">Descripción:</string>
    <string name="txt_title_time">Horario:</string>
    <string name="txt_tvFilter">Selecciona el Distrito</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="errorOnAttach">Error en el Attach de datos</string>
    <string name="spnFilter">Selecciona un Filtro</string>
    <string name="noDataFound">Error en la consulta</string>
</resources>