<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="@color/color_backgroundApp"
    android:padding="@dimen/padding_default"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >

    <LinearLayout
        android:id="@+id/ll_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_titleDistrict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_district"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title"
            />

        <TextView
            android:id="@+id/tv_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"
            android:paddingLeft="10dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_titleZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_zone"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title"
            />

        <TextView
            android:id="@+id/tv_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"
            android:paddingLeft="10dp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_titleDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_direction"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title"
            />

        <TextView
            android:id="@+id/tv_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"
            android:paddingLeft="10dp"
            />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:id="@+id/tv_titleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"

            />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:id="@+id/tv_titleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_time"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_title"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"
            />


        </LinearLayout>


    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>