<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_backgroundApp"
    android:padding="@dimen/padding_default"
    tools:context=".MainActivity">
    
   

    <ImageView
        android:src="@drawable/museum_del_prado2"
        android:scaleType="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center|top"
        android:text="@string/tv_info"
        android:textColor="@color/color_text"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Provisional"
        android:textColor="@color/color_text"
        android:textSize="16sp"
        android:layout_gravity="left|top"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="15dp"
        />
    
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fg_container"
        android:name="com.example.proyectob_pmdm_t2_kaiscervasquez.Start_Fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        tools:layout="@layout/fragment_start_"
        />

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <Button
            android:id="@+id/btn_selectFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_btn"
            android:text="@string/txt_btn_selectFilter"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            />
        <View
            android:layout_width="15dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btn_consultLists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_btn"
            android:text="@string/txt_btn_consultLists"
            android:textColor="@color/color_text"
            android:textStyle="bold" />

    </LinearLayout>





</FrameLayout>